@@ -1,3 +1,8 @@
+Boost 1.35.0-1
+--------------
+  
+  * Removed package bcp.  The binary "bcp" is now found in libboost-dev.
+
 Boost 1.34.0-1
 --------------
 
